<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.yasince.yemeksepeti.ui.profile.ProfileActivity">

    <include layout="@layout/appbar" />

    <ImageView
        android:id="@+id/profilePicIv"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profileNameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textSize="20sp"
        tools:text="Yasin Cetiner" />

    <TextView
        android:id="@+id/profileBirthDateTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        tools:text="15.01.1990" />

    <EditText
        android:id="@+id/profilePhoneEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/phone"
        android:inputType="phone"
        android:maxLines="1" />

    <EditText
        android:id="@+id/profileAddressEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/address"
        android:inputType="text"
        android:maxLines="2" />

</LinearLayout>
