<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.yasince.yemeksepeti.ui.login.LoginActivity">

    <ImageView
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/loginUsernameEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/username"
        android:inputType="text"
        android:maxLines="1"
        tools:text="yasin" />

    <EditText
        android:id="@+id/loginPasswordEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:imeOptions="actionDone"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        tools:text="32432432432" />

    <Button
        android:id="@+id/loginSubmitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/login" />
</LinearLayout>
