<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.yasince.yemeksepeti.ui.users.UsersActivity">

    <include layout="@layout/appbar" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/usersContainerRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
